# WasmCompare

zip-archive-go-wasm/: main.go  main.wasm
zip-archive-rust-wasm/: Cargo.toml
zip-archive-rust-wasm/src/: lib.rs
