[package]
name = "zip-archive-rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
serde = { version = "1.0.215", features = ["derive"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
zip = {version="2.2.0" , default-features = false, features = [ "deflate" ]}

[dependencies.web-sys]
version = "0.3.72"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'MouseEvent',
  'Url',
  'HtmlAnchorElement',
  'Window',
]
